--- a/mastertweakprefs/Makefile
+++ b/mastertweakprefs/Makefile
@@ -3,7 +3,7 @@ ARCHS = armv7 arm64
 include $(THEOS)/makefiles/common.mk
 
 BUNDLE_NAME = MasterTweakPrefs
-MasterTweakPrefs_FILES = DTTRootListController.m DTCRootListController.m
+MasterTweakPrefs_FILES = DTTRootListController.m
 MasterTweakPrefs_INSTALL_PATH = /Library/PreferenceBundles
 MasterTweakPrefs_FRAMEWORKS = UIKit
 MasterTweakPrefs_PRIVATE_FRAMEWORKS = Preferences
